updated remnote apk, fix css alignment issue when timer is going

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
   font-weight: 600;
   text-align: center;
   color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .expired-notice,
@@ -24,9 +27,10 @@
 }
 
 .divider {
-  border: 1px solid #000000;
 }
 
 .counter-section {
-  margin-left: 4em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
